gitops/platform/gateways/public-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway

metadata:
  name: public-gateway
  namespace: envoy-gateway-system

spec:

  gatewayClassName: envoy

  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: gateway-proxy-config
      namespace: envoy-gateway-system

  listeners:

  - name: http

    protocol: HTTP

    port: 80

    allowedRoutes:
      namespaces:
        from: All
